@@ -55,48 +55,8 @@ main(int argc, char *argv[]) {
 
 #include "mergetrylist"
 
-    /* Add the obsolete names for some programs */
-    TRY("bmptoppm", main_bmptopnm);
-    TRY("gemtopbm", main_gemtopnm);
-    TRY("icontopbm", main_sunicontopnm);
-    TRY("pbmtoicon", main_pbmtosunicon);
-    TRY("pgmedge", main_pamedge);
-    TRY("pgmnorm", main_pnmnorm);
-    TRY("pgmoil", main_pamoil);
-    TRY("pgmslice", main_pamslice);
-    TRY("pnmarith", main_pamarith);
-    TRY("pngtopnm", main_pngtopam);
-    TRY("pnmarith", main_pamarith);
-    TRY("pnmcomp", main_pamcomp);
-    TRY("pnmcut", main_pamcut);
-    TRY("pnmdepth", main_pamdepth);
-    TRY("pnmfile", main_pamfile);
-    TRY("pnminterp", main_pamstretch);
-    TRY("pnmenlarge", main_pamenlarge);
-    TRY("pnmscale", main_pamscale);
-    TRY("pnmsplit", main_pamsplit);
-    TRY("pnmtofits", main_pamtofits);
-    TRY("pnmtopnm", main_pamtopnm);
-    TRY("ppmnorm", main_pnmnorm);
-    TRY("ppmtotga", main_pamtotga);
-    TRY("ppmtouil", main_pamtouil);
-    TRY("pnmtopnm", main_pamtopnm);
-    TRY("ppmnorm", main_pnmnorm);
-    TRY("ppmtotga", main_pamtotga);
-
-    /* We don't do the ppmtojpeg alias because if user doesn't have a JPEG
-       library, there is no main_pnmtojpeg library.  The right way to do
-       this is to have these TRY's generated by the subdirectory makes,
-       which would know whether pnmtojpeg was built into the merged binary
-       or not.  But that's too much work.  Same with TIFF and PNG converters.
-
-    TRY("ppmtojpeg", main_pnmtojpeg);
-    TRY("pngtopnm", main_pngtopam);
-    TRY("pnmtotiff", main_pamtotiff);
-    TRY("pamrgbatopng", main_pamtopng);
-    */
-
     fprintf(stderr,"'%s' is an unknown Netpbm program name \n", cp );
+
     exit(1);
 }
 
